# platformer2D

./: .gitignore  CMakeLists.txt  README.md
src/: Animation.cpp  Animation.h  CMakeLists.txt  Editor.cpp  Editor.h  GameState.cpp  GameState.h  Goal.cpp  Goal.h  Level.h  Platform.cpp  Platform.h  Player.cpp  Player.h  globals.h  main.cpp
src/test/: testEditor.cpp
